--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
+    "mongoose": "^4.4.12",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "nodemon": "^1.9.1",
+    "serve-favicon": "~2.3.0",
+    "twitter": "^1.2.5",
+    "underscore": "^1.8.3"
   }
 }
