--- a/client/bower.json
+++ b/client/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-material": "^1.0.8"
+    "angular-material": "^1.0.8",
+    "font-awesome": "^4.6.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
